step-1-page-created-in-mobile-view

--- a/index.css
+++ b/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.common-class {
+    @apply w-full mb-4;
+  }
+
+.label-err-css{
+    @apply flex justify-between;
+}  
