desktop-view-completed

--- a/index.css
+++ b/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+
+    body{
+        margin: 0px;
+    }
+
+
 .common-class {
     @apply w-full mb-4;
   }
@@ -11,5 +17,9 @@
 }  
 
 .card{
-    @apply bg-white w-80 h-fit rounded-xl p-4 absolute top-24;
+    @apply bg-white w-80 h-fit rounded-xl p-4 absolute sm:static top-24;
+}
+
+.large-main{
+    @apply sm:w-screen sm:h-screen sm:bg-magnolia  sm:flex sm:justify-center sm:items-center;
 }
