--- a/output.css
+++ b/output.css
@@ -582,6 +582,10 @@ video {
   bottom: 0px;
 }
 
+.top-4 {
+  top: 1rem;
+}
+
 .m-1 {
   margin: 0.25rem;
 }
@@ -608,6 +612,10 @@ video {
 
 .ml-3 {
   margin-left: 0.75rem;
+}
+
+.ml-4 {
+  margin-left: 1rem;
 }
 
 .mr-3 {
@@ -650,10 +658,6 @@ video {
   height: 1rem;
 }
 
-.h-40 {
-  height: 10rem;
-}
-
 .h-5 {
   height: 1.25rem;
 }
@@ -682,6 +686,10 @@ video {
   width: 100%;
 }
 
+.max-w-4xl {
+  max-width: 56rem;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
@@ -708,6 +716,10 @@ video {
 
 .justify-between {
   justify-content: space-between;
+}
+
+.gap-0 {
+  gap: 0px;
 }
 
 .rounded-full {
@@ -794,8 +806,9 @@ video {
   background-color: hsl(0 0% 100% / var(--tw-bg-opacity, 1));
 }
 
-.bg-sidebar-mobile {
-  background-image: url('./assets/images/bg-sidebar-mobile.svg');
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .p-2 {
@@ -812,10 +825,6 @@ video {
 
 .p-5 {
   padding: 1.25rem;
-}
-
-.p-6 {
-  padding: 1.5rem;
 }
 
 .p-8 {
@@ -848,6 +857,10 @@ video {
 
 .pt-3 {
   padding-top: 0.75rem;
+}
+
+.text-left {
+  text-align: left;
 }
 
 .text-center {
@@ -914,6 +927,11 @@ video {
   color: rgb(156 163 175 / var(--tw-text-opacity, 1));
 }
 
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity, 1));
+}
+
 .text-marine-blue {
   --tw-text-opacity: 1;
   color: hsl(213 96% 18% / var(--tw-text-opacity, 1));
@@ -939,6 +957,10 @@ video {
   transition-duration: 150ms;
 }
 
+body{
+  margin: 0px;
+}
+
 .common-class {
   margin-bottom: 1rem;
   width: 100%;
@@ -961,28 +983,105 @@ video {
   padding: 1rem;
 }
 
+@media (min-width: 640px) {
+  .card {
+    position: static;
+  }
+
+  .large-main {
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+    align-items: center;
+    justify-content: center;
+    --tw-bg-opacity: 1;
+    background-color: hsl(217 100% 97% / var(--tw-bg-opacity, 1));
+  }
+}
+
 .peer:checked ~ .peer-checked\:translate-x-6 {
   --tw-translate-x: 1.5rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-@media not all and (min-width: 376px) {
-  .max-sm\:block {
-    display: block;
+@media (min-width: 640px) {
+  .sm\:static {
+    position: static;
   }
 
-  .max-sm\:hidden {
-    display: none;
+  .sm\:absolute {
+    position: absolute;
+  }
+
+  .sm\:h-fit {
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+
+  .sm\:w-fit {
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+
+  .sm\:w-full {
+    width: 100%;
+  }
+
+  .sm\:flex-row {
+    flex-direction: row;
+  }
+
+  .sm\:gap-4 {
+    gap: 1rem;
+  }
+
+  .sm\:bg-transparent {
+    background-color: transparent;
+  }
+
+  .sm\:bg-white {
+    --tw-bg-opacity: 1;
+    background-color: hsl(0 0% 100% / var(--tw-bg-opacity, 1));
+  }
+
+  .sm\:p-5 {
+    padding: 1.25rem;
   }
 }
 
-@media (min-width: 376px) {
-  .sm\:flex {
-    display: flex;
+@media (min-width: 768px) {
+  .md\:top-16 {
+    top: 4rem;
   }
 
-  .sm\:hidden {
+  .md\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
+  .md\:block {
+    display: block;
+  }
+
+  .md\:hidden {
     display: none;
+  }
+
+  .md\:flex-col {
+    flex-direction: column;
+  }
+
+  .md\:items-start {
+    align-items: flex-start;
+  }
+
+  .md\:p-6 {
+    padding: 1.5rem;
+  }
+
+  .md\:px-16 {
+    padding-left: 4rem;
+    padding-right: 4rem;
   }
 }
 
